v.1.5.2
- armor and hotbar will no longer be dropped on death by default. (SUPER EXPERIMENTAL, PROBABLY BUGGY) 
I think arpgs where it can take years to get good gear shouldn't allow you to lose it that easily.
Depending on how stable this feature is, it will either become core or abandoned.

v1.5.1
- fix runewords not being given unless item had an empty socket

v.1.5.0

- added new rpg like gui overlay! Thanks SattesKrokodil for making the gui parts! 
Set your PLAYER_GUI_TYPE in client configs to RPG.
It is now the default gui.

- level per distance now uses cordinate scale. So when you enter nether at lvl 5 in overworld, nether mobs should also be lvl 5. 
(but nether has minimum lvl by default so might be higher. but at least won't be max level like before)
In short, you won't meet lvl 50 mobs when you enter nether from lvl 1 locaton. 
But you will progress MUCH faster in mob lvls while walking in nether! 
This will work with all modded dimensions that use the vanilla cordinate scale value

- spell modifier datapacks removed. I realized i can just turn them into stats, that allows for more customization!
- caster has spellmod condition is now caster has stat
- added new datapack stats that can do everything spell modifiers did: cooldown, mana cost, damage etc (per spell)
- changed unique gear datapacks to not use item id for their lang name and desc keys. 
Now follows same naming theme as my other datapacks: modid.type.identifier
- added armor tag to plate armors. Fixes error in plate armor generation (nearly all affixes require armor tag)
- added extra projectiles to spell datapack stat (unused currently, open to modpackers)
- added istargetally condition for spells
- internal code change, statdata split into In Calculation data, and calculated data. Should prevent future bugs as now it's clear what context is given.
But it probably means short term bugs.